fix overflow  hover modal home page

--- a/document-your-life/src/Components/HomePage/homePage.scss
+++ b/document-your-life/src/Components/HomePage/homePage.scss
@@ -209,7 +209,9 @@
 
      .modalHover {
          &-box {
-             justify-content: space-evenly;
+             &::-webkit-scrollbar {
+                display: none;
+              }
          }
 
          &-container-text {
